@@ -46,6 +46,8 @@ Version 1.5.0, xxx, 2014 -- Release 1.5
   new function writeOpenModelicaResultDictionary() that writes
   a result dictionary for the OpenModelica regression tests.
 - Added regression tests for FMU export for Dymola.  
+- In regression tests, added a check for parameters that only have
+  a start value assigned.
 
 Version 1.4.0, February 28, 2014 -- Release 1.4
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
